--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AJ Retro Portfolio</title>
+    <title>AJ NICHOLS</title>
     <meta name="color-scheme" content="dark light">
     <link rel="icon" href="/favicon.ico" />
   </head>
