--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>AJ NICHOLS</title>
     <meta name="color-scheme" content="dark light">
-    <link rel="icon" href="/favicon.ico" />
+   <link rel="icon" href="${import.meta.env.BASE_URL}favicon.ico" />
   </head>
   <body class="bg-base text-text font-mono">
     <div id="root"></div>
